--- a/Ansible_3/application/tasks/delpoy_site.yml
+++ b/Ansible_3/application/tasks/delpoy_site.yml
@@ -5,7 +5,7 @@
     dest: "/var/www/{{ http_host }}/"
     force: yes
   when: inventory_hostname in ['appserver']
-  tags: apache-php-configuration
+  tags: deply-site
 
 # Update DB configuration file for the site
 - name: Deploy DB configuration file
@@ -13,5 +13,5 @@
     src: "templates/db.php.j2"
     dest: "/var/www/{{ http_host }}/db.php"
   when: inventory_hostname in ['appserver']
-  tags: apache-php-configuration
+  tags: deply-site
   notify: Reload Apache
